Dec 17, 2024
  gtf generator: transcript_ids are now fully versioned

Dec 09, 2024
  genes: fix to properly handle null strands and null gene names

Dec 06, 2024
  genes: fix to avoid NullPointerException

Nov 01, 2024
  dog: added generation of files for assemblies Dog10K_Boxer_Tasha & UU_Cfam_GSD_1.0

Sep 13, 2024
  agr: implemented stable ids
  jbrowse2 gff files: added UTH_SHR, UTH_SHRSP and UTH_WKY to list of processed rat assemblies

Jul 11, 2024
  agr: added export of chromosome regions in header

Apr 16 2024
  jbrowse2: added black rat assembly

Mar 18 2024
  jbrowse2: added bonobo assembly NHGRI_mPanPan1_v2.0_pri
  jbrowse2: fixed aliases generation

Mar 08 2024
  jbrowse2: added rn8

Mar 04 2024
  carpe-variants: fixes of positions for deletions; processing in 10 simultaneous threads

Mar 01 2024
  carpe-variants: fixes of positions for non-snvs,
                  export variant type in column 3 of gff3 file

Feb 23 2024
  ensembl-prep: fixed code to handle scaffold-only assemblies
  ensembl: fixed output dir for tracks
  clinvar: added generation of pathogenic track

Feb 22 2024
  ensembl: updated source to build 111

Feb 19 2024
  agr gff3: fixed export of merged gene positions

Dec 15 2023
Dec 14 2023
  jbrowse2: gff3 dir name must not have spaces in the name -- it causes problems with some tools

Dec 05, 2023
  jbrowse2: gff3 dir name must be same as assembly RefSeq name

Nov 28, 2023
  jbrowse2: fixed script to create dir for uth files

Nov 27, 2023
  jbrowse2: added handling of squirrel HiC_Itri_2 assembly
  Gff3ColumnWriter: simplified code

Oct 06, 2023
  agr: generated files are sorted abd bgzipped

Sep 22, 2023
  jbrowse2: fixed generation of aliases file

Sep 11, 2023
  jbrowse2: added generation of file with aliases for every assembly

Sep 08, 2023
  jbrowse2: added support for species other than rat/mouse/human

Sep 05, 2023
  jbrowse2: added generation of phenotypic variants file

Aug 29, 2023
  jbrowse2: updated config for mouse and human
