@@ -34,9 +34,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.25.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.10'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.6.0.24.10'
+    implementation 'org.springframework:spring-jdbc:6.1.11'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
